--- a/koha-tmpl/intranet-tmpl/prog/en/modules/members/readingrec.tt
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/members/readingrec.tt
@@ -25,7 +25,7 @@
         </li>
         <li>
             <a href="#" aria-current="page">
-                Circulation history for [% INCLUDE 'patron-title.inc' %]
+                Circulation history for [% INCLUDE 'patron-title.inc' no_html = 1 %]
             </a>
         </li>
     </ol>
