--- a/koha-tmpl/intranet-tmpl/prog/en/modules/circ/circulation_batch_checkouts.tt
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/circ/circulation_batch_checkouts.tt
@@ -38,7 +38,7 @@
             </li>
             <li>
                 <a href="#" aria-current="page">
-                    [% INCLUDE 'patron-title.inc' %]
+                    [% INCLUDE 'patron-title.inc' no_html = 1 %]
                 </a>
             </li>
         [% ELSE %]
