--- a/koha-tmpl/intranet-tmpl/prog/en/modules/members/apikeys.tt
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/members/apikeys.tt
@@ -20,7 +20,7 @@
         </li>
         <li>
             <a href="#" aria-current="page">
-                API Keys for [% INCLUDE 'patron-title.inc' %]
+                API Keys for [% INCLUDE 'patron-title.inc' no_html = 1%]
             </a>
         </li>
     </ol>
