--- a/koha-tmpl/intranet-tmpl/prog/en/modules/members/ill-requests.tt
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/members/ill-requests.tt
@@ -26,7 +26,7 @@
             </li>
             <li>
                 <a href="#" aria-current="page">
-                    ILL requests history for [% INCLUDE 'patron-title.inc' %]
+                    ILL requests history for [% INCLUDE 'patron-title.inc' no_html = 1 %]
                 </a>
             </li>
         </ol>
