--- a/koha-tmpl/intranet-tmpl/prog/en/modules/members/notices.tt
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/members/notices.tt
@@ -28,7 +28,7 @@
         </li>
         <li>
             <a href="#" aria-current="page">
-                Sent notices for [% INCLUDE 'patron-title.inc' %]
+                Sent notices for [% INCLUDE 'patron-title.inc' no_html = 1 %]
             </a>
         </li>
     </ol>
