--- a/koha-tmpl/intranet-tmpl/prog/en/modules/members/statistics.tt
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/members/statistics.tt
@@ -36,7 +36,7 @@
             </li>
             <li>
                 <a href="#" aria-current="page">
-                    Statistics for [% INCLUDE 'patron-title.inc' invert_name = 1 %]
+                    Statistics for [% INCLUDE 'patron-title.inc' invert_name = 1 no_html = 1 %]
 
                 </a>
             </li>
