KD-XXXX: Add before_addbiblio_errors hook for Nalkutin
before_addbiblio_errors will be called with biblionumber and the record
to be saved. It should return an arrayref of any errors encountered.

--- a/koha-tmpl/intranet-tmpl/prog/en/modules/cataloguing/addbiblio.tt
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/cataloguing/addbiblio.tt
@@ -804,6 +804,14 @@ function PopupMARCFieldDoc(field) {
 
                 <div id="check_errors"></div>
 
+                [% IF ( before_addbiblio_errors ) %]
+                <ul id="before_addbiblio_errors" class="error">
+                    [% FOREACH err IN before_addbiblio_errors %]
+                    <li>[% err %]</li>
+                    [% END %]
+                </ul>
+                [% END %]
+
                 <h1>
                     [% IF ( biblionumber ) %]
                         Editing <em>[% title | html %]</em> (Record number [% biblionumber | html %])
